objects/Beverages__c.object
<CustomObject>
    <fields>
        <fullName>Available_Stock__c</fullName>
        <label>Available Stock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>200ml</fullName>
                </value>
                <value>
                    <fullName>500ml</fullName>
                </value>
                <value>
                    <fullName>350ml</fullName>
                </value>
                <value>
                    <fullName>1L</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flavour__c</fullName>
        <label>Flavour</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Coca Cola</fullName>
                </value>
                <value>
                    <fullName>Sprite</fullName>
                </value>
                <value>
                    <fullName>Lemon</fullName>
                </value>
                <value>
                    <fullName>Strawberry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quanity__c</fullName>
        <label>Quanity</label>
        <type>AutoNumber</type>
    </fields>
    <label>Beverages</label>
    <nameField>
        <label>Beverages Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Beverages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>